// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaseCancel transactions transformResult function works for many 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "100000",
        "height": 600887,
        "id": "9oQDeqq23NuaXmGu3o635QKrZbXizZsiTbagmDzkdUaa",
        "leaseId": "6id3Ym9VqVFkddAUWUbUNDb6mmTtDRPf78tp9p1g51Ah",
        "sender": "3PMY5XbSpvcQnYNCMiLWAaHuTwQwN6sSoy4",
        "senderPublicKey": "AiXERNpnVgGM25Au55kfcz39K9FUoysqD5nCSpew4MYo",
        "signature": "5CVsdA6Weyx28MyGAQoFD8HdSBMmop3RQJvGv8w4k2axRyJ4f76oV4vWoCoV31B4Dv2dRcSfG6N88AzszccH9xV",
        "timestamp": 2017-07-29T02:22:01.407Z,
        "type": 8,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "100000",
        "height": 600887,
        "id": "9oQDeqq23NuaXmGu3o635QKrZbXizZsiTbagmDzkdUaa",
        "leaseId": "6id3Ym9VqVFkddAUWUbUNDb6mmTtDRPf78tp9p1g51Ah",
        "sender": "3PMY5XbSpvcQnYNCMiLWAaHuTwQwN6sSoy4",
        "senderPublicKey": "AiXERNpnVgGM25Au55kfcz39K9FUoysqD5nCSpew4MYo",
        "signature": "5CVsdA6Weyx28MyGAQoFD8HdSBMmop3RQJvGv8w4k2axRyJ4f76oV4vWoCoV31B4Dv2dRcSfG6N88AzszccH9xV",
        "timestamp": 2017-07-29T02:22:01.407Z,
        "type": 8,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": null,
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "fee": "100000",
        "height": 600887,
        "id": "9oQDeqq23NuaXmGu3o635QKrZbXizZsiTbagmDzkdUaa",
        "leaseId": "6id3Ym9VqVFkddAUWUbUNDb6mmTtDRPf78tp9p1g51Ah",
        "sender": "3PMY5XbSpvcQnYNCMiLWAaHuTwQwN6sSoy4",
        "senderPublicKey": "AiXERNpnVgGM25Au55kfcz39K9FUoysqD5nCSpew4MYo",
        "signature": "5CVsdA6Weyx28MyGAQoFD8HdSBMmop3RQJvGv8w4k2axRyJ4f76oV4vWoCoV31B4Dv2dRcSfG6N88AzszccH9xV",
        "timestamp": 2017-07-29T02:22:01.407Z,
        "type": 8,
        "version": 1,
      },
    },
  ],
  "lastCursor": "MjAxNy0wNy0yOVQwMjoyMjowMS40MDdaOjo5b1FEZXFxMjNOdWFYbUd1M282MzVRS3JaYlhpelpzaVRiYWdtRHprZFVhYTo6YXNj",
}
`;

exports[`LeaseCancel transactions transformResult function works for one 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "fee": "100000",
    "height": 600887,
    "id": "9oQDeqq23NuaXmGu3o635QKrZbXizZsiTbagmDzkdUaa",
    "leaseId": "6id3Ym9VqVFkddAUWUbUNDb6mmTtDRPf78tp9p1g51Ah",
    "sender": "3PMY5XbSpvcQnYNCMiLWAaHuTwQwN6sSoy4",
    "senderPublicKey": "AiXERNpnVgGM25Au55kfcz39K9FUoysqD5nCSpew4MYo",
    "signature": "5CVsdA6Weyx28MyGAQoFD8HdSBMmop3RQJvGv8w4k2axRyJ4f76oV4vWoCoV31B4Dv2dRcSfG6N88AzszccH9xV",
    "timestamp": 2017-07-29T02:22:01.407Z,
    "type": 8,
    "version": 1,
  },
}
`;
